--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap');
+body {
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 16px;
+}
+nav{
+  border: 1px solid rgb(200, 200, 200);
+  padding: 8px;
+}
+h1,.h1{
+  font-weight: 600;
+  font-size: 2.7rem;
+}
+ul, li {
+  list-style: none;
+}
+.logo{
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+.nav_container{
+   display: flex;
+   justify-content: space-around;
+  margin-top: 8px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  max-width: 1280px;
+  padding-top: 40px;
+  margin: auto;
+}
+.country_container{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 30px;
+  margin: auto;
+}
+@media only screen and (max-width: 1280px) {
+  .container {
+    max-width: 1024px;
+  }
+  .country_container {
+    grid-template-columns: auto auto auto;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+  .country_container {
+    grid-template-columns: auto auto;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .country_container {
+    grid-template-columns: auto;
+  }
+}
+.country_flag{
+    max-height: 300px;
+    width: 300px;
+}
+.country-holder{
+    width: 300px;
+    text-align: center;
+}
+.nav_list{
+  list-style: none;
+  display: flex;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.inner_sortBy{
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: .9rem;
+    position: absolute;
+    display: block;
+    padding: 20px;
+    border-top: 1px solid rgb(219, 229, 230);
+    background-color: #fff;
+}
+.list_style{
+  margin-right: 15px;
+  padding: 10px 20px;
+  border-right: 1px solid rgb(200, 200, 200);
+}
+.inner_listed_style, label{
+    margin: 10px;
+    margin-right: 10px;
+
 }
